#pragma once

#include "event.hpp"
#include "ievent_serializer.hpp"
#include "iipc_factory.hpp"
#include "signal_helper.hpp"

#include <atomic>
#include <chrono>
#include <map>
#include <memory>
#include <mutex>
#include <string>

struct Statistics {
    int warningCount = 0;
    int errorCount = 0;
    std::map<std::string, std::map<std::string, int>> componentSeverityCount;
};

class Consumer : public IStopper {
public:
    Consumer(std::unique_ptr<IIPCReader> reader, std::shared_ptr<IEventSerializer> serializer);

    Consumer(const std::string& pipeName, IIPCFactory& factory);

    void start();
    void stop() noexcept override;
    void processEvent(const Event& evt);
    Statistics getStatistics() const;

private:
    void printStatistics() const;

    std::unique_ptr<IIPCReader> reader_;
    std::shared_ptr<IEventSerializer> serializer_;
    std::atomic<bool> running_;
    Statistics stats_;
    mutable std::mutex statsMutex_;
    std::chrono::steady_clock::time_point lastStatsTime_;
};
