@startuml class_diagram_simple

top to bottom direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 10
skinparam packageStyle rectangle

skinparam class {
    BackgroundColor white
    BorderColor #444444
    FontSize 18
    AttributeFontSize 16
    StereotypeFontSize 14
}
skinparam interface {
    BackgroundColor #e8f4fb
    BorderColor #2980b9
    FontSize 18
    AttributeFontSize 16
}
skinparam package {
    BackgroundColor #fafafa
    BorderColor #aaaaaa
    FontStyle bold
    FontSize 20
}
skinparam enum {
    BackgroundColor #fff8e1
    BorderColor #f39c12
    FontSize 17
    AttributeFontSize 15
}

skinparam ArrowColor #333333
skinparam nodesep 60
skinparam ranksep 55

' ═══════════════════════════════════════════
'  Entry Point
' ═══════════════════════════════════════════
package "Entry Point" {
    class "main.cpp" as Main <<module>> {
        + main() : int
    }
}

' ═══════════════════════════════════════════
'  Business Logic
' ═══════════════════════════════════════════
package "Business Logic" {
    class Producer {
        + generateEvent() : Event
        + start() : void
        + stop() : void
    }

    class Consumer {
        + start() : void
        + stop() : void
        + processEvent(evt) : void
        + getStatistics() : Statistics
    }
}

' ═══════════════════════════════════════════
'  Interfaces
' ═══════════════════════════════════════════
package "Interfaces" {
    interface IStopper {
        + {abstract} stop() : void
    }
    interface IIPCWriter {
        + {abstract} write(msg) : void
    }
    interface IIPCReader {
        + {abstract} read(msg, timeoutMs) : bool
    }
    interface IIPCFactory {
        + {abstract} createWriter(name) : IIPCWriter
        + {abstract} createReader(name) : IIPCReader
    }
    interface IEventSerializer {
        + {abstract} serialize(e) : string
        + {abstract} deserialize(s) : Event
    }
}

' ═══════════════════════════════════════════
'  Domain
' ═══════════════════════════════════════════
package "Domain" {
    class Event <<struct>> {
        + timestamp : time_point
        + component : string
        + severity : Severity
        + message : string
    }

    enum Severity {
        INFO
        WARNING
        ERROR
    }

    class Statistics <<struct>> {
        + warningCount : int
        + errorCount : int
        + componentSeverityCount : map
    }
}

' ═══════════════════════════════════════════
'  IPC Implementation
' ═══════════════════════════════════════════
package "IPC\n(Named Pipe / FIFO)" {
    class IPCWriter {
        + write(msg) : void
    }
    class IPCReader {
        + read(msg, timeoutMs) : bool
    }
    class PipeIPCFactory {
        + createWriter(name) : IIPCWriter
        + createReader(name) : IIPCReader
    }
}

' ═══════════════════════════════════════════
'  Serialization
' ═══════════════════════════════════════════
package "Serialization" {
    class EventSerializer {
        + serialize(e) : string
        + deserialize(s) : Event
    }
}

' ═══════════════════════════════════════════
'  Relationships
' ═══════════════════════════════════════════

IStopper         <|..  Producer
IStopper         <|..  Consumer
IIPCWriter       <|..  IPCWriter
IIPCReader       <|..  IPCReader
IIPCFactory      <|..  PipeIPCFactory
IEventSerializer <|..  EventSerializer

PipeIPCFactory  ..>  IPCWriter  : <<creates>>
PipeIPCFactory  ..>  IPCReader  : <<creates>>

Producer  *--  IIPCWriter
Producer  o--  IEventSerializer
Consumer  *--  IIPCReader
Consumer  o--  IEventSerializer
Consumer  *--  Statistics

Event  -->  Severity
Producer  ..>  Event : generates
Consumer  ..>  Event : processes

Main  ..>  IIPCFactory
Main  ..>  Producer
Main  ..>  Consumer

@enduml
